flux/infra/harbor/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor-web-route
  namespace: harbor
spec:
  parentRefs:
    - name: main-gateway
      namespace: traefik

  hostnames:
    - harbor.tartarus.us

  rules:
    - backendRefs:
        - name: harbor
          port: 443
