flux/infra/harbor/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: harbor-web
  namespace: harbor
  annotations:
    switchboard.borchero.com/ignore: "all"
    external-dns.alpha.kubernetes.io/target: traefik.tartarus.us
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`harbor.tartarus.us`)
      kind: Rule
      services:
        - name: harbor
          kind: Service
          port: https
          scheme: https
          serversTransport: harbor-web
      middlewares:
        - name: https-redirect-middleware
          namespace: harbor
  tls:
    secretName: letsencrypt-wildcard-cert-tartarus.us-prod
